# drainpipe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  package.json
.github/workflows/: docker-image.yml
gui/: index.html  main.js  style.css
src/: config.rs  daemon.rs  db.rs  dl.rs  error.rs  file.rs  gui.rs  main.rs  media.rs  source.rs
