[package]
name = "drainpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
owo-colors = "3.5"
feed-rs = "1.2"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"
dirs = "4.0"
env_logger = "0.9"
log = "0.4"
notify = "5.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
